--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -16,6 +16,6 @@
     string in this file.
     -->
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
-
+        AIzaSyAnkM4qjxEGESmCwyTm8-VmOh50rMhhbI0
     </string>
 </resources>
