--- a/app/src/main/res/drawable/rim2.xml
+++ b/app/src/main/res/drawable/rim2.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid android:color="@color/Style_PrimaryDark"/>
+    <stroke android:width="3dp" android:color="@color/Style_WhiteTransparent"/>
+    <gradient android:angle="135" android:centerX="0.5" android:centerY="0.5"
+        android:type="linear"
+        android:startColor="@color/Style_Black"
+        android:centerColor="@color/Style_Black"
+        android:endColor="@color/Style_White"/>
+    <padding android:left="2dp" android:right="2dp" android:bottom="2dp" android:top="2dp"/>
 </shape>
