--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Style_Black2"
     tools:context=".MainActivity"
     android:orientation="vertical">
 
@@ -12,29 +13,6 @@
         android:layout_width="match_parent"
         layout="@layout/toolbar"
         />
-
-    <Button
-        android:paddingLeft="@dimen/thin_margin"
-        android:paddingRight="@dimen/thin_margin"
-        android:paddingTop="@dimen/thin_margin"
-        android:paddingBottom="@dimen/thin_margin"
-        android:id="@+id/btn1"
-        android:text="Maps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-
-    <TextView
-        android:paddingLeft="@dimen/thin_margin"
-        android:paddingRight="@dimen/thin_margin"
-        android:paddingTop="@dimen/thin_margin"
-        android:paddingBottom="@dimen/thin_margin"
-        android:id="@+id/txt1"
-        android:text="This is text.\n"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
