--- a/app/src/main/res/menu/toolbar_option.xml
+++ b/app/src/main/res/menu/toolbar_option.xml
@@ -7,23 +7,21 @@
         android:id="@+id/action_favorite"
         android:title="@string/action_favorite"
         android:orderInCategory="1"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="never"/>
 
     <!-- Settings, should always be in the overflow -->
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        app:showAsAction="always"/>
-    <group
-        android:id="@+id/group">
-        <item
-            android:id="@+id/gitem1"
-            android:title="G1"
-            app:showAsAction="always"/>
-        <item
-            android:id="@+id/gitem2"
-            android:title="G2"
-            app:showAsAction="always"/>
-    </group>
-
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_Map"
+        android:title="M"
+        app:showAsAction="never"
+        />
+    <item
+        android:id="@+id/action_test"
+        android:title="T"
+        app:showAsAction="collapseActionView"
+        />
 </menu>
