--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,46 +4,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/thin_margin"
-    android:paddingRight="@dimen/thin_margin"
-    android:paddingTop="@dimen/thin_margin"
-    android:paddingBottom="@dimen/thin_margin"
-    android:background="@color/colorLightSkyBlue"
+    android:background="@color/Style_Black"
     tools:context="com.example.user.googlemapstest.Main2Activity">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/Main2_toolBar"
-        android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
-        android:background="?attr/colorPrimaryDark"
-        android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-    <EditText
-        android:id="@+id/edtxt"
-        android:layout_below="@+id/Main2_toolBar"
-        android:layout_width="match_parent"
+    <include
+        android:id="@+id/toolbar"
         android:layout_height="wrap_content"
-        android:text="test input"/>
-
+        android:layout_width="match_parent"
+        layout="@layout/toolbar"
+        />
 
     <fragment
-        android:layout_below="@id/edtxt"
+        android:id="@+id/googleMap"
+        android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"
-        tools:context="com.example.user.googlemapstest.MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        android:layout_below="@+id/toolbar"
+        />
+
+    <EditText
+        android:id="@+id/begin"
+        android:layout_below="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alpha="0.8"
+        android:background="@color/Style_White"
+        />
+    <EditText
+        android:id="@+id/end"
+        android:layout_below="@+id/begin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:alpha="0.8"
+        android:background="@color/Style_White"
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatbtn"
-        android:layout_alignTop="@+id/map"
+        android:layout_alignBottom="@+id/googleMap"
+        android:layout_alignStart="@+id/googleMap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:pressedTranslationZ="12dp"
-        app:rippleColor="@color/colorGreen6"
+        app:rippleColor="@color/Style_PrimaryDark"
         />
 
 
