--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/Style_PrimaryDarker">
-    <Button
-        android:id="@+id/tbtn"
+    <EditText
+        android:id="@+id/toolbar_edtxt"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="match_parent"
+        />
 </android.support.v7.widget.Toolbar>
